[package]
name = "filter_yaml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
crossterm = { version = "0.19", features = [ "serde" ] }

chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.7.3", default-features = false, features = ["std"] }
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
unicode-width = "0.1"


